--- a/HACKING.mdwn
+++ b/HACKING.mdwn
@@ -10,7 +10,7 @@ Release checklist
 
  * make sure tests pass: `./t/test-bup-cron.sh`
  * update the `__version_info__` field in `bup_cron/__init__.py`
- * commit everything: `git commit -a -m'prepare release x.y'`
+ * commit everything: `git commit -a -m'prepare release x.y' -S`
  * lay down the git tag: `git tag -s x.y`
  * make a tarball: `./setup.py sdist`
  * sign it: `ls dist/*.{egg,tar.gz} | xargs gpg --detach-sign -a`
