--- a/CHANGELOG.mdwn
+++ b/CHANGELOG.mdwn
@@ -1,3 +1,14 @@
+bup-cron (1.3)
+
+  * logging output improvements:
+   * display longer stats only one per run, and only the diff per path
+   * silence a bunch of messages in 'info' mode, explain a policy
+   * do not always log the (generally empty) git note output
+  * arguments can now be passed to bup during tests
+  * remove hand-made wrapper script, now that setuptools does it for us
+
+ -- Antoine Beaupré <anarcat@debian.org>  Fri, 12 Dec 2014 17:18:49 -0500
+
 bup-cron (1.2)
 
   * display the proper process name in syslog (closes #2)
